/**
 * 
 */

/**
 * @author bruel
 *
 */
public class PizzaFromageStyleBrest extends Pizza { 
	public PizzaFromageStyleBrest() {
		nom = "Pizza sauce style brest et fromage"; 
		pate = "Pâte fine";
		sauce = "Sauce Marinara";
		garnitures.add("Parmigiano reggiano râpé"); 
	}
}