@startuml

'-----------------------------------
' UML concepts illustrated
' JMB 2014
'-----------------------------------

'hide circle
hide empty members
hide empty methods

abstract class Pizza {
  # String nom
  # String pate
  # String sauce
  # List<Ingredients> garnitures
  # Pizza (String, String, String, List<Ingredients>)
  + void preparer()
  + void cuire()
  + void couper()
  + void emballer()
  + String getNom()
}

class PizzaFromageStyleBrest {
  +PizzaFromageStyleBrest()
}
Pizza <|-- PizzaFromageStyleBrest

class PizzaFromageStyleStrasbourg {
  +PizzaFromageStyleStrasbourg()
}
Pizza <|-- PizzaFromageStyleStrasbourg

class PizzaFromageStyleCorse as "..." {
}
Pizza <|-- PizzaFromageStyleCorse

@enduml
